# test_task-1

./: Dockerfile  README.md  main.py  pyproject.toml  server.py
tests/unit_tests/: test_api.py
