[tool.poetry]
name = "test-task-1"
version = "0.1.0"
description = ""
authors = ["EugeneSpiridonov <eugenespint@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task_1"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
